# trait_deref

./: Cargo.toml  README.md
src/: lib.rs
tests/: empty.rs  extension.rs
